<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plansys2_core</name>
  <version>2.0.9</version>
  
  <description>This package contains the PDDL-based core  for the ROS2 Planning System.
  TRACLabs backported it to ROS1</description>

  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>  
  <author email="fmrico@gmail.com">Francisco Martin Rico</author>
 
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>plansys2_pddl_parser</depend>
  <depend>plansys2_msgs</depend>


  <export>
  </export>

</package>
