<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>plansys2_executor</name>
  <version>2.0.8</version>
  
  <description>This package contains the Executor module for the ROS2 Planning System</description>

  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>
 
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>lifecycle</depend>
  <depend>lifecycle_msgs</depend>
<!--  <depend>rclcpp_cascade_lifecycle</depend>-->
  <depend>plansys2_core</depend>
  <depend>plansys2_pddl_parser</depend>
  <depend>plansys2_msgs</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_planner</depend>
  <depend>pluginlib</depend>
  <depend>behaviortree_cpp</depend>
  <depend>std_msgs</depend>
  <depend>libzmq3-dev</depend>

  <exec_depend>popf</exec_depend>

<!--  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>
-->
  <export>
    <plansys2_executor plugin="${prefix}/plugins.xml" />
  </export>

</package>
