<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>plansys2_msgs</name>
  <version>2.0.8</version>
  
  <description>Messages and service files for the ROS2 Planning System (backported to ROS1)</description>

  <maintainer email="fmrico@gmail.com">Francisco Martin Rico</maintainer>
  <maintainer email="ana@traclabs.com">Ana C.H.Q. </maintainer>
  
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>message_generation</depend>

  <exec_depend>message_runtime</exec_depend>


  <export>
  </export>

</package>
